--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payoo Bank</title>
+    <!-- daisy ui cdn -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" /> -->
+
+    <!-- Tailwind cdn -->
+        <!-- <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script> -->
+
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
 </head>
-<body>
-    
+<body class="bg-[#f4f5f7] h-[100vh] flex flex-col  justify-center items-center ">
+    <div class="h-[130px] w-[300px] bg-[url(./assets/bg.png)] bg-cover flex justify-center items-center">
+        <img src="assets/Group.png" alt="">
+    </div>
+    <form class=" bg-white rounded-2xl p-5 w-[350px] ">
+        <div class="mt-5">
+            <label for="" class="font-semibold">Mobile Number</label><br>
+        <input type="text" placeholder="Enter your number" class="input bg-[#f4f5f7] mt-3  rounded-3xl" id="mobile-number" />
+        </div>
+        <div class="mt-5">
+            <label for=""  class="font-semibold">4 Digit Pin</label><br>
+        <input type="text" placeholder="Enter 4 Digit Pin" class="input bg-[#f4f5f7] mt-3  rounded-3xl" id="pin-number"/>
+        </div>
+        <button class="btn bg-[#0874f2] text-white mt-5 w-full rounded-3xl " id="loginButton" type="button">Login</button>
+
+
+    </form>
+<script src="./assets/script.js"></script>
 </body>
 </html>
